[tool.poetry]
name = "SpEx+"
version = "0.1.0"
description = "My SS homework"
authors = ["Artur Gimranov"]
readme = "README.md"

packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
torch = ">=1.11.0"
torchvision = ">=0.12.0"
torchaudio = ">=0.11.0"
torchmetrics = "==1.2.0"
pesq = "==0.0.4"
hydra-core = "==1.3"
pyloudnorm = "0.1.1"
numpy = "*"
tqdm = "*"
tensorboard = "*"
matplotlib = "*"
pandas = "*"
wandb = "*"
datasets = "*"
speechbrain = "*"
torch_audiomentations = "*"
gdown = "*"
wget = "*"
prettytable = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
